# pauper

./: .gitignore  README.md  pyproject.toml
data/applications/: io.github.mike_cr.Pauper.desktop
data/metainfo/: io.github.mike_cr.Pauper.metainfo.xml
data/speech-dispatcher/: speechd-pauper.conf
data/speech-dispatcher/modules/: pauper-generic.conf
data/systemd/user/: pauper.service
debian/: README.furios  changelog  control  install  links  postinst  postrm  rules
pauper/: __init__.py  audio.py  client.py  config.py  daemon.py  gui.py  paths.py  protocol.py  providers.py  voices.py
pauper/resources/: __init__.py  voices.json
script/: furios-build-and-smoke  furios-build-cached  furios-build-deb  furios-setup-pauper-apt  furios-smoke-deb
tools/: build_voice_catalog.py
